[gd_scene load_steps=9 format=3 uid="uid://dj5elpk4ma3gc"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_8y5om"]
[ext_resource type="Texture2D" uid="uid://lei8aj71ss48" path="res://Textures/Enemy/örkki.png" id="1_xtnpo"]
[ext_resource type="PackedScene" uid="uid://cu8wbalbsj72m" path="res://Utility/hit_box.tscn" id="2_45uji"]
[ext_resource type="PackedScene" uid="uid://ke1dg3omafgd" path="res://Utility/hurt_box.tscn" id="4_2xwfl"]
[ext_resource type="AudioStream" uid="uid://c4exw1ele56gt" path="res://Audio/SoundEffect/enemy_hit2.ogg" id="5_0nu2n"]
[ext_resource type="AudioStream" uid="uid://da8f5ldkfbr48" path="res://Audio/SoundEffect/enemy_death2.ogg" id="6_q5y4o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qsdof"]
radius = 4.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b7ljs"]
radius = 12.0
height = 46.0

[node name="enemy_örkki" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_8y5om")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xtnpo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_qsdof")

[node name="HitBox" parent="." instance=ExtResource("2_45uji")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -1)

[node name="HurtBox" parent="." instance=ExtResource("4_2xwfl")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_b7ljs")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0nu2n")
volume_db = -20.0
pitch_scale = 2.0

[node name="snd_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_q5y4o")
volume_db = -10.0
pitch_scale = 1.35

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HitBox"]
[editable path="HurtBox"]
